# ocm-desktop

./: CMakeLists.txt  README.md  attacked_board.cpp  attacked_board.h  bishop.cpp  bishop.h  board.cpp  board.h  colors.h  const.h  game.cpp  game.h  logic.cpp  logic.h  main.cpp  piece.cpp  piece.h  tempo.cpp  tempo.h
.github/workflows/: cmake.yml
cmake/: FindSDL2_ttf.cmake
